--- a/docs-src/docs/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-your-first-scene.mdx
@@ -103,7 +103,7 @@ This is often useful when uploading large scenes that take some time to process.
 
 ## Next steps
 
-- [Key concepts](./key_concepts): Learn about the key concepts of the Kognic Platform
+- [Key concepts](./): Learn about the key concepts of the Kognic Platform
 - [Calibrations](./kognic-io/calibrations/overview): Learn how to create and manage calibrations
 - [Scenes](./kognic-io/scenes/overview): Learn how to interact with scenes on the Kognic Platform
 - [Sending scene for annotation](./working_with_scenes_and_inputs#creating-inputs-from-scene): Learn how to send a scene for annotation
