--- a/docs-src/docs/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-your-first-scene.mdx
@@ -104,7 +104,7 @@ This is often useful when uploading large scenes that take some time to process.
 ## Next steps
 
 - [Key concepts](./): Learn about the key concepts of the Kognic Platform
+- [Scenes](./kognic-io/overview): Dive deeper into scenes and how to work with them
 - [Calibrations](./kognic-io/calibrations/overview): Learn how to create and manage calibrations
-- [Scenes](./kognic-io/scenes/overview): Learn how to interact with scenes on the Kognic Platform
-- [Sending scene for annotation](./working_with_scenes_and_inputs#creating-inputs-from-scene): Learn how to send a scene for annotation
+- [Sending scene for annotation](./kognic-io/working_with_scenes_and_inputs#creating-inputs-from-scene): Learn how to send a scene for annotation
 
