--- a/docs-src/docs/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-your-first-scene.mdx
@@ -27,7 +27,7 @@ This guide will walk you through the process of uploading your first scene, eith
 
 ## Prerequisites
 
-You have successfully followed the [Quickstart](./) guide and have the `kognic-io` client installed.
+You have successfully followed the [Quickstart](./quickstart.mdx) guide and have the `kognic-io` client installed.
 
 
 ## Uploading a 2D scene
