Move inline styling to css file

--- a/docs-src/docs/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-your-first-scene.mdx
@@ -27,9 +27,9 @@ This guide will walk you through the process of uploading your first scene, eith
 
 You have successfully followed the [Quickstart](./quickstart.mdx) guide and have the `kognic-io` client installed.
 
-<details style={{backgroundColor: 'white', borderColor: 'var(--kognic-lavender)'}}>
+<details>
   <summary>
-    <h2 style={{margin: 0}}>Uploading a 2D scene</h2>
+    <h2>Uploading a 2D scene</h2>
   </summary>
 
 To upload a 2D scene, you need to have the raw images available on your local machine (or create a [callback](https://developers.kognic.com/docs/kognic-io/overview#data-from-callback) for remote data).
@@ -64,9 +64,9 @@ This is often useful when uploading large scenes that take some time to process.
 
 </details>
 
-<details style={{backgroundColor: 'white', borderColor: 'var(--kognic-lavender)'}}>
+<details>
   <summary>
-    <h2 style={{margin: 0}}>Uploading a 2D/3D scene</h2>
+    <h2>Uploading a 2D/3D scene</h2>
   </summary>
 
 To upload a 2D/3D scene, you need to have the raw images and point clouds available on your local machine (or create a [callback](https://developers.kognic.com/docs/kognic-io/overview#data-from-callback) for remote data).
