Fix broken links

--- a/docs-src/docs/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-your-first-scene.mdx
@@ -93,7 +93,7 @@ Below follows examples for a few different cases.
 
 :::note
 Multiple point clouds is also supported, but not shown in the examples above since that requires a bit more data.
-See the [Motion Compensation](./kognic-io/scenes/motion-compensation) section for more details.
+See the [Motion Compensation](./kognic-io/scenes/lidars_with_imu_data.md) section for more details.
 :::
 
 The `scene_uuid` returned in the response can be used to reference the scene in future API calls. For example, to check the status of the scene:
