Added --upgrade to installation instructions

--- a/docs-src/docs/quickstart.mdx
+++ b/docs-src/docs/quickstart.mdx
@@ -22,12 +22,12 @@ Installation can be done via pip:
 <Tabs>
   <TabItem value="kognic-io-installation" label="kognic-io" default>
     ```bash
-    pip install kognic-io
+    pip install --upgrade kognic-io
     ```
   </TabItem>
   <TabItem value="kognic-auth-installation" label="kognic-auth" default>
     ```bash
-    pip install kognic-auth
+    pip install --upgrade kognic-auth
     ```
   </TabItem>
 </Tabs>
