--- a/docs-src/docs/kognic-io/calibrations/overview.mdx
+++ b/docs-src/docs/kognic-io/calibrations/overview.mdx
@@ -5,7 +5,7 @@ title: Calibrations Overview
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-Scenes including both a 2D and 3D representation such as `lidars_and_cameras` deal with data in a number of different 
+Scenes including both a 2D and 3D representation deal with data in a number of different 
 [coordinate systems](../coordinate_systems.md). These scenes require a calibration that relate the different sensors to
 each other in terms of location and orientation. The calibration should also contain the required information for 
 projecting 3D points into the image plane of the camera.
