--- a/docs-src/docs/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-your-first-scene.mdx
@@ -14,8 +14,7 @@ import LidarsAndCamerasOne from "./code-snippets/scenes-3d/_one-lidar-one-image.
 import LidarsAndCamerasMultiple from "./code-snippets/scenes-3d/_one-lidar-multiple-images.md";
 import LidarsAndCamerasSeq from "./code-snippets/scenes-3d/_lidars-and-cameras-seq.md";
 
-import CheckSceneStatus from "./code-snippets/_check-scene-status.md";
-import GetSceneViewLink from "./code-snippets/_get-scene-view-link.md";
+import FindingTheScene from "./code-snippets/_finding_the_scene.mdx";
 
 # Upload your first scene
 
@@ -52,15 +51,7 @@ Below follows examples for a few different cases.
   </TabItem>
 </Tabs>
 
-The `scene_uuid` returned in the response can be used to reference the scene in future API calls. For example, to check the status of the scene:
-
-<CheckSceneStatus />
-
-This is often useful when uploading large scenes that take some time to process. If the scene is ready, you can view it in the Kognic Platform by following the link retrieved from the API:
-
-<GetSceneViewLink />
-
-{/* TODO: Add link to scenes table when that is released */}
+<FindingTheScene />
 
 </details>
 
@@ -96,15 +87,7 @@ Multiple point clouds is also supported, but not shown in the examples above sin
 See the [Motion Compensation](./kognic-io/scenes/lidars_with_imu_data.md) section for more details.
 :::
 
-The `scene_uuid` returned in the response can be used to reference the scene in future API calls. For example, to check the status of the scene:
-
-<CheckSceneStatus />
-
-This is often useful when uploading large scenes that take some time to process. If the scene is ready, you can view it in the Kognic Platform by following the link retrieved from the API:
-
-<GetSceneViewLink />
-
-{/* TODO: Add link to scenes table when that is released */}
+<FindingTheScene />
 
 </details>
 
