--- a/docs-src/docs/upload-your-first-scene.mdx
+++ b/docs-src/docs/upload-your-first-scene.mdx
@@ -14,17 +14,15 @@ import LidarsAndCamerasOne from "./code-snippets/scenes-3d/_one-lidar-one-image.
 import LidarsAndCamerasMultiple from "./code-snippets/scenes-3d/_one-lidar-multiple-images.md";
 import LidarsAndCamerasSeq from "./code-snippets/scenes-3d/_lidars-and-cameras-seq.md";
 
-import FindingTheScene from "./code-snippets/_finding_the_scene.mdx";
-
 # Upload your first scene
 
 When uploading raw data to the Kognic Platform, you need to do so in the form of a **scene**.
 A scene is a collection of data from different sources, such as images, point clouds, and other sensor data.
-This guide will walk you through the process of uploading your first scene, either in 2D or 3D.
+This guide will walk you through the process of uploading your first scene, either in 2D (camera only) or 3D (camera and LiDAR/RADAR).
 
 ## Prerequisites
 
-You have successfully followed the [Quickstart](./quickstart.mdx) guide and have the `kognic-io` client installed.
+You have successfully followed the [Quickstart](./quickstart.mdx) guide and have the `kognic-io` library installed.
 
 <details>
   <summary>
@@ -50,8 +48,6 @@ Below follows examples for a few different cases.
     <CamerasSeq />
   </TabItem>
 </Tabs>
-
-<FindingTheScene />
 
 </details>
 
@@ -87,12 +83,41 @@ Multiple point clouds is also supported, but not shown in the examples above sin
 See the [Motion Compensation](./kognic-io/scenes/lidars_with_imu_data.md) section for more details.
 :::
 
-<FindingTheScene />
-
 </details>
+
+## What happens now?
+
+The response given when creating the scene, the `scene_uuid`, is used to refer to the scene in the future. You can now
+check the status of the scene via the Platform or the Python client.
+
+<Tabs>
+    <TabItem value="platform" label="Kognic Platform" default>
+        Go to the [Data Orchestration tab](https://app.kognic.com/data-orchestration) in the Kognic Platform and search for the scene by its UUID or use any other suitable search criteria.
+        The status is shown in a column in the scenes list.
+
+        Note that you may need to contact Kognic to get access to _Data Orchestration_ in case you do not see it.
+    </TabItem>
+    <TabItem value="python" label="Python" default>
+        Use the `get_scenes_by_uuids` method to get the scene object from its UUID:
+
+        ```python
+        scene = client.scene.get_scenes_by_uuids([scene_uuid])[0]
+        ```
+
+        The scene object will contain the status of the scene.
+
+        ```python
+        print(f"Scene {scene.uuid} has status {scene.status}")
+        ```
+    </TabItem>
+</Tabs>
+
+You may see the scene initially in the *processing* state while Kognic performs a little background processing, or in the
+*ready* or *failed* state after processing completes.
 
 ## Next steps
 
+- [View your scene](./view-uploaded-scene.mdx) in the Kognic Platform
 - [Key concepts](./key_concepts.md): Learn about the key concepts of the Kognic Platform
 - [Scenes](./kognic-io/overview): Dive deeper into scenes and how to work with them
 - [Calibrations](./kognic-io/calibrations/overview): Learn how to create and manage calibrations
