--- a/docs-src/docs/prerequisites-for-annotation.mdx
+++ b/docs-src/docs/prerequisites-for-annotation.mdx
@@ -20,27 +20,26 @@ this is mostly organization and workforce level preparation, but it is good to b
 A scene is sent for annotation by adding it to a *Request*, creating what we call and *Input*, which has its own UUID.
 This is detailed on the next page.
 
-The request is part of a *Batch*, itself part of a *Project*. Projects and initial Requests and Batches will be set up,
+The request is part of a *Batch*, itself part of a *Project*. Projects and initial Requests and Batches may be set up,
 possibly in conjunction with Perception Experts from Kognic, during the onboarding/setup phase for new customers.
 They may also be managed independently or in conjunction with a BPO who provides annotation services through the Kognic platform.
+
+- Projects can be created in the Kognic Platform, under Project Management > Create new project.
+- Requests can be created in the Kognic Platform, under Project Management > Project > (your project) > Create new request.
 </details>
 
 <details>
   <summary>
-    <h2 style={{margin: '0px'}}>Taxonomies</h2>
+    <h2 style={{margin: '0px'}}>Taxonomies & Annotation Instruction</h2>
   </summary>
 
 The taxonomy defines the "what" of annotation: what is there to annotate, and hence what does the resulting annotation describe?
 The classes of object and the domain and range of their properties, plus annotatable properties of the scene.
-</details>
-
-<details>
-  <summary>
-    <h2 style={{margin: '0px'}}>Annotation Instruction</h2>
-  </summary>
 
 In essence, the Annotation Instruction defines the arrangements for the annotation process itself: for example that
 polylines are to be drawn to label lane markings.
+
+Annotation instructions can be created in the Kognic Platform, under Project Management > Annotation Instructions.
 </details>
 
 Projects, Requests, Taxonomies and Annotation Instructions are not required to exist or be completely configured in order to upload scenes.
